force-app/main/default/objects/LOCATOR__c/fields/ActualAvailableCapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>ActualAvailableCapacityCBM__c</fullName>
    <formula>CapacityCBM__c - ActualOccupiedCapacityCBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE CAPACITY(CBM) INCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>