force-app/main/default/objects/LOCATOR__c/fields/ActualAvailableCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>ActualAvailableCapacityKG__c</fullName>
    <formula>CapacityKG__c - ActualOccupiedCapacityKG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE CAPACITY(KG) INCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>