force-app/main/default/objects/LOCATOR__c/fields/ActualOccupiedCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>ActualOccupiedCapacityKG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OCCUPIED CAPACITY (KG) INCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>