force-app/main/default/objects/LOCATOR__c/fields/AreaCode__c.field-meta.xml
<CustomField>
    <fullName>AreaCode__c</fullName>
    <inlineHelpText>Input A before number digit.</inlineHelpText>
    <label>AREA CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>