force-app/main/default/objects/LOCATOR__c/fields/BarCodeImage__c.field-meta.xml
<CustomField>
    <fullName>BarCodeImage__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=MECARD:N:&apos; + LocatorCode__c , &apos;Create Qr Code for this item&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOCATOR BAR CODE IMAGE</label>
    <type>Text</type>
</CustomField>