force-app/main/default/objects/LOCATOR__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LACATOR (BUYER)</relationshipLabel>
    <relationshipName>LacatorBuyer</relationshipName>
    <type>Lookup</type>
</CustomField>