force-app/main/default/objects/LOCATOR__c/fields/CapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>CapacityCBM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MAX CAPACITY(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>