force-app/main/default/objects/LOCATOR__c/fields/CapacityKG__c.field-meta.xml
<CustomField>
    <fullName>CapacityKG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MAX CAPACITY(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>