force-app/main/default/objects/LOCATOR__c/fields/CurrentAvailableCapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>CurrentAvailableCapacityCBM__c</fullName>
    <formula>CapacityCBM__c - CurrentOccupiedCapacityCBM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE CAPACITY(CBM) EXCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>