force-app/main/default/objects/LOCATOR__c/fields/CurrentAvailableCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>CurrentAvailableCapacityKG__c</fullName>
    <formula>CapacityKG__c - CurrentOccupiedCapacityKG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE CAPACITY(KG) EXCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>