force-app/main/default/objects/LOCATOR__c/fields/CurrentOccupiedCapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>CurrentOccupiedCapacityCBM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OCCUPIED CAPACITY (CBM) EXCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>