force-app/main/default/objects/LOCATOR__c/fields/CurrentOccupiedCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>CurrentOccupiedCapacityKG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>OCCUPIED CAPACITY (KG) EXCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>