force-app/main/default/objects/LOCATOR__c/fields/FastSlowClassification__c.field-meta.xml
<CustomField>
    <fullName>FastSlowClassification__c</fullName>
    <inlineHelpText>FSN
F:Fast-moving
S:Slow-moving
N:Non-moving</inlineHelpText>
    <label>FAST/SLOW CLASSIFICATION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FastSlowClassification</valueSetName>
    </valueSet>
</CustomField>