force-app/main/default/objects/LOCATOR__c/fields/FloorCode__c.field-meta.xml
<CustomField>
    <fullName>FloorCode__c</fullName>
    <defaultValue>&quot;F&quot;</defaultValue>
    <label>FLOOR CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>