force-app/main/default/objects/LOCATOR__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <inlineHelpText>Input L before number digit.</inlineHelpText>
    <label>LEVEL CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>