force-app/main/default/objects/LOCATOR__c/fields/LocationAreaType__c.field-meta.xml
<CustomField>
    <fullName>LocationAreaType__c</fullName>
    <label>LOCATION AREA TYPE</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AreaType</valueSetName>
    </valueSet>
</CustomField>