force-app/main/default/objects/LOCATOR__c/fields/LocatorCode__c.field-meta.xml
<CustomField>
    <fullName>LocatorCode__c</fullName>
    <formula>IF(OR(ISBLANK(FloorCode__c),FloorCode__c == &quot;F&quot;),&quot;F00&quot;,FloorCode__c) + &quot;-&quot; +
IF(OR(ISBLANK(AreaCode__c), AreaCode__c == &quot;A&quot;),&quot;A00&quot;,AreaCode__c) + &quot;-&quot; +
IF(OR(ISBLANK(SectionCode__c), SectionCode__c == &quot;S&quot;),&quot;S00&quot;,SectionCode__c)+ &quot;-&quot; +
IF(OR(ISBLANK(Rack__c), Rack__c  == &quot;R&quot;),&quot;R00&quot;,Rack__c)+ &quot;-&quot; +
IF(OR(ISBLANK(Level__c), Level__c == &quot;L&quot;),&quot;L00&quot;,Level__c)</formula>
    <label>LOCATOR CODE</label>
    <type>Text</type>
</CustomField>