force-app/main/default/objects/LOCATOR__c/fields/LocatorDescription__c.field-meta.xml
<CustomField>
    <fullName>LocatorDescription__c</fullName>
    <label>LOCATOR DESCRIPTION</label>
    <type>TextArea</type>
</CustomField>