force-app/main/default/objects/LOCATOR__c/fields/LocatorLayer__c.field-meta.xml
<CustomField>
    <fullName>LocatorLayer__c</fullName>
    <label>LOCATOR LAYER</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floor Layer</fullName>
            </value>
            <value>
                <fullName>Area Layer</fullName>
            </value>
            <value>
                <fullName>Section Layer</fullName>
            </value>
            <value>
                <fullName>Rack Layer</fullName>
            </value>
            <value>
                <fullName>Level Layer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>