force-app/main/default/objects/LOCATOR__c/fields/LocatorQRLabel__c.field-meta.xml
<CustomField>
    <fullName>LocatorQRLabel__c</fullName>
    <formula>IF(ISBLANK(Locator_Code__c) ,
IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; +  Name , &apos;Create Qr Code for this item&apos; ),IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; +  Locator_Code__c, &apos;Create Qr Code for this item&apos; ))</formula>
    <label>LOCATOR QR LABEL</label>
    <type>Text</type>
</CustomField>