force-app/main/default/objects/LOCATOR__c/fields/MainOperator__c.field-meta.xml
<CustomField>
    <fullName>MainOperator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>In W/O Assign Resources tab, when the Locator is set, Main Operator will be added to worker list as Operator (default)</inlineHelpText>
    <label>Main Operator</label>
    <referenceTo>WORKER__c</referenceTo>
    <relationshipLabel>LOCATOR</relationshipLabel>
    <relationshipName>Locator</relationshipName>
    <type>Lookup</type>
</CustomField>