force-app/main/default/objects/LOCATOR__c/fields/ParentLocator__c.field-meta.xml
<CustomField>
    <fullName>ParentLocator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT LOCATOR</label>
    <referenceTo>LOCATOR__c</referenceTo>
    <relationshipLabel>CHILD LOCATOR</relationshipLabel>
    <relationshipName>LocatorHierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>