force-app/main/default/objects/LOCATOR__c/fields/PlannedCargoKG__c.field-meta.xml
<CustomField>
    <fullName>PlannedCargoKG__c</fullName>
    <label>PLANNED CARGO(KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>