force-app/main/default/objects/LOCATOR__c/fields/Rack__c.field-meta.xml
<CustomField>
    <fullName>Rack__c</fullName>
    <inlineHelpText>Input R before number digit.</inlineHelpText>
    <label>RACK CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>