force-app/main/default/objects/LOCATOR__c/fields/SectionCode__c.field-meta.xml
<CustomField>
    <fullName>SectionCode__c</fullName>
    <inlineHelpText>Input S before number digit.</inlineHelpText>
    <label>SECTION CODE</label>
    <length>4</length>
    <type>Text</type>
</CustomField>