force-app/main/default/objects/LOCATOR__c/fields/SharedCapacityCBM__c.field-meta.xml
<CustomField>
    <fullName>SharedCapacityCBM__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Shared Capacity (CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>