force-app/main/default/objects/LOCATOR__c/fields/SharedCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>SharedCapacityKG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Shared Capacity (KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>