force-app/main/default/objects/LOCATOR__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>LocatorCode__c &amp; &apos; - &apos; &amp;   text(LocationAreaType__c) 
&amp; &apos; - &apos; &amp; WarehouseID__r.FacilityName__c &amp; &apos; - &apos; &amp; Name</formula>
    <label>QR Display Summary</label>
    <type>Text</type>
</CustomField>