force-app/main/default/objects/LOCATOR__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SUPPLIER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LACATOR (SUPPLIER)</relationshipLabel>
    <relationshipName>LacatorSupplier</relationshipName>
    <type>Lookup</type>
</CustomField>