force-app/main/default/objects/LOCATOR__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TENANT</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LACATOR</relationshipLabel>
    <relationshipName>LACATOR</relationshipName>
    <type>Lookup</type>
</CustomField>