force-app/main/default/objects/LOCATOR__c/fields/WarehouseID__c.field-meta.xml
<CustomField>
    <fullName>WarehouseID__c</fullName>
    <label>WAREHOUSE ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>LOCATOR</relationshipLabel>
    <relationshipName>Locator</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>