force-app/main/default/objects/LOCATOR__c/recordTypes/SubLayer.recordType-meta.xml
<RecordType>
    <fullName>SubLayer</fullName>
    <active>true</active>
    <description>Sub Layer is the layer has a parent layer.</description>
    <label>Sub Layer</label>
</RecordType>