force-app/main/default/objects/LOCATOR__c/recordTypes/TopLayor.recordType-meta.xml
<RecordType>
    <fullName>TopLayor</fullName>
    <active>true</active>
    <description>Top layer is the layer has no parent layer. It is set Floor as default.</description>
    <label>Top Layer</label>
</RecordType>