force-app/main/default/objects/LOCATOR__c/validationRules/Check_Locator_Code_Level_Layer.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Locator_Code_Level_Layer</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(LocatorLayer__c,&apos;Level Layer&apos;)&amp;&amp;(OR(FloorCode__c== &apos;F00&apos;, FloorCode__c== &apos;F&apos;,
ISBLANK(FloorCode__c),
AreaCode__c == &apos;A00&apos;, AreaCode__c == &apos;A&apos;,
ISBLANK(AreaCode__c),
SectionCode__c  == &apos;S00&apos;,
SectionCode__c  == &apos;S&apos;,
ISBLANK(SectionCode__c),
Rack__c == &apos;R00&apos;,
Rack__c == &apos;R&apos;,
ISBLANK(Rack__c ),
Level__c == &apos;L00&apos;,
Level__c == &apos;L&apos;,
ISBLANK(Level__c )))</errorConditionFormula>
    <errorMessage>Level layer must have  Floor Code and Area Code and Section Code and Rack Code and Level Code</errorMessage>
</ValidationRule>