force-app/main/default/objects/LOCATOR__c/validationRules/Check_Locator_Code_Section_Layer.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Locator_Code_Section_Layer</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(LocatorLayer__c,&apos;Section Layer&apos;)&amp;&amp;(OR(FloorCode__c== &apos;F00&apos;, FloorCode__c== &apos;F&apos;,
ISBLANK(FloorCode__c),
AreaCode__c == &apos;A00&apos;, AreaCode__c == &apos;A&apos;,
ISBLANK(AreaCode__c),
SectionCode__c  == &apos;S00&apos;,
SectionCode__c  == &apos;S&apos;,
ISBLANK(SectionCode__c),
(Rack__c != &apos;R00&apos;&amp;&amp; Rack__c != &apos;R&apos;&amp;&amp; NOT(ISBLANK(Rack__c ))),
(Level__c != &apos;L00&apos;&amp;&amp;Level__c != &apos;L&apos;&amp;&amp; NOT(ISBLANK(Level__c )))))</errorConditionFormula>
    <errorMessage>Section layer must have only Floor Code and Area Code and Section Code</errorMessage>
</ValidationRule>