force-app/main/default/objects/LOCATOR__c/validationRules/Check_Locator_Layer.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Locator_Layer</fullName>
    <active>true</active>
    <errorConditionFormula>Text(LocatorLayer__c) =  Text(ParentLocator__r.LocatorLayer__c)</errorConditionFormula>
    <errorDisplayField>ParentLocator__c</errorDisplayField>
    <errorMessage>Parent Locator&apos;s Locator Layer must be different from the record&apos;s</errorMessage>
</ValidationRule>