force-app/main/default/objects/LOCATOR__c/validationRules/Check_Warehouse.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Warehouse</fullName>
    <active>true</active>
    <description>warehouse must be the same with parents Locator</description>
    <errorConditionFormula>NOT(ISBLANK(ParentLocator__c))&amp;&amp;  WarehouseID__c !=  ParentLocator__r.WarehouseID__c</errorConditionFormula>
    <errorMessage>Warehouse must be the same with parents Locator.</errorMessage>
</ValidationRule>