force-app/main/default/objects/LOCATOR__c/validationRules/Required_Parent_Locator.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Parent_Locator</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL(LocatorLayer__c,&apos;Floor Layer&apos;)) &amp;&amp;
 ISBLANK(ParentLocator__c)</errorConditionFormula>
    <errorMessage>Parents Locator is required.</errorMessage>
</ValidationRule>