force-app/main/default/objects/LOCATOR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WarehouseID__c</columns>
    <columns>LocationAreaType__c</columns>
    <columns>LocatorDescription__c</columns>
    <columns>LocatorCode__c</columns>
    <columns>Active__c</columns>
    <columns>LOCATOR_MANAGEMENT_RULE__c</columns>
    <columns>FastSlowClassification__c</columns>
    <columns>SKU__c</columns>
    <columns>CapacityCBM__c</columns>
    <columns>CapacityKG__c</columns>
    <columns>ChargeType__c</columns>
    <columns>Tenant__c</columns>
    <columns>Buyer__c</columns>
    <columns>Supplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>0.All</label>
    <language>en_US</language>
</ListView>