force-app/main/default/objects/LOCATOR__c/listViews/LocatorSearch.listView-meta.xml
<ListView>
    <fullName>LocatorSearch</fullName>
    <columns>NAME</columns>
    <columns>WarehouseID__c</columns>
    <columns>LocationAreaType__c</columns>
    <columns>LocatorDescription__c</columns>
    <columns>Active__c</columns>
    <columns>LocatorCode__c</columns>
    <columns>Tenant__c</columns>
    <columns>Supplier__c</columns>
    <columns>Buyer__c</columns>
    <columns>SKU__c</columns>
    <columns>ChargeType__c</columns>
    <columns>FastSlowClassification__c</columns>
    <columns>ActualAvailableCapacityCBM__c</columns>
    <columns>ActualAvailableCapacityKG__c</columns>
    <filterScope>Everything</filterScope>
    <label>☘LOCATOR SEARCH☘</label>
    <language>en_US</language>
</ListView>