force-app/main/default/objects/LOCATOR__c/listViews/PackingLocator.listView-meta.xml
<ListView>
    <fullName>PackingLocator</fullName>
    <columns>NAME</columns>
    <columns>LocatorCode__c</columns>
    <columns>LocatorLayer__c</columns>
    <columns>ParentLocator__c</columns>
    <columns>WarehouseID__c</columns>
    <columns>CurrentOccupiedCapacityCBM__c</columns>
    <columns>CurrentAvailableCapacityCBM__c</columns>
    <columns>CurrentOccupiedCapacityKG__c</columns>
    <columns>CurrentAvailableCapacityKG__c</columns>
    <columns>ActualOccupiedCapacityCBM__c</columns>
    <columns>ActualAvailableCapacityCBM__c</columns>
    <columns>ActualOccupiedCapacityKG__c</columns>
    <columns>ActualAvailableCapacityKG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LocationAreaType__c</field>
        <operation>equals</operation>
        <value>Packing Area</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>5. Packing Locator</label>
    <language>en_US</language>
</ListView>